# hermes-signal-group-chat

./: .gitignore  LICENSE  README.md  __init__.py  _util.py  access_control.py  adapter.py  commands.py  config_store.py  delete_watch.py  group_buffer.py  modes.py  observability.py  plugin.yaml  pyproject.toml  register.py  staging.py  tools.py
tests/: conftest.py  test_config_store.py  test_delete_watch.py  test_group_buffer.py  test_modes.py  test_staging.py
